...
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="80dp"
    tools:context=".LoginActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layoutemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:inputType="textEmailAddress"
            android:hint="Correo"
            android:textColor="@android:color/black"
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layoutpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutemail"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Contraseña"
            android:inputType="textPassword"
            android:textColor="@android:color/black" />

...
        <LinearLayout
            android:layout_width="190dp"
            android:layout_height="111dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_below="@id/layoutpassword"
                android:layout_marginTop="30dp"
                android:background="@android:color/transparent"
                android:freezesText="false"
                android:gravity="center_vertical|center_horizontal"
                android:text="Iniciar"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
...
