<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mapLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/map"
...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/desde"
                android:layout_width="354dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:focusable="false"
                android:fontFamily="sans-serif-light"
                android:hint="Desde (Click para editar)"
                android:inputType="time"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/hasta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:focusable="false"
                android:fontFamily="sans-serif-light"
                android:hint="Hasta (Click para editar)"
                android:inputType="time"
                android:textColor="#000000" />
        </LinearLayout>

        <Button
            android:id="@+id/filtrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:background="@drawable/boton_redondo"
            android:text="Filtrar" />
    </LinearLayout>


</LinearLayout>

